added meta tags for social media sharing

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Oscar Medina Full Stack Web Development Portfolio"
-      content="Oscar Medina full-stack web development. Working on new projects for the web!"
-    />
+    <meta name="title" content="Oscar Medina Full-Stack Web Developer">
+    <meta name="description" content="Hello World! My Name is Oscar and this is my portfolio. Feel free to read up on my work experience and view my projects!">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://oscar-medina.com/">
+    <meta property="og:title" content="Oscar Medina Full-Stack Web Developer">
+    <meta property="og:description" content="Hello World! My Name is Oscar and this is my portfolio. Feel free to read up on my work experience and view my projects!">
+    <meta property="og:image" content="">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://oscar-medina.com/">
+    <meta property="twitter:title" content="Oscar Medina Full-Stack Web Developer">
+    <meta property="twitter:description" content="Hello World! My Name is Oscar and this is my portfolio. Feel free to read up on my work experience and view my projects!">
+    <meta property="twitter:image" content="">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/aea67d5f69.js" crossorigin="anonymous"></script>    
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <title>Oscar Medina Full-Stack Web Dev</title>
+    <title>Oscar Medina Full-Stack Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
