added image URL to META tags in HTML

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     <meta property="og:url" content="https://oscar-medina.com/">
     <meta property="og:title" content="Oscar Medina Full-Stack Web Developer">
     <meta property="og:description" content="Hello World! My Name is Oscar and this is my portfolio. Feel free to read up on my work experience and view my projects!">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://github.com/ogmedina/React-Portfolio/blob/main/public/Readme_Images/oscar_medina_portfolio.jpg">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://oscar-medina.com/">
     <meta property="twitter:title" content="Oscar Medina Full-Stack Web Developer">
     <meta property="twitter:description" content="Hello World! My Name is Oscar and this is my portfolio. Feel free to read up on my work experience and view my projects!">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://github.com/ogmedina/React-Portfolio/blob/main/public/Readme_Images/oscar_medina_portfolio.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/aea67d5f69.js" crossorigin="anonymous"></script>    
